src/test/deca/context/invalid/provided/testi04.deca
//Resultats :
//Erreur contextuelle
//Ligne 8 : A method is already defined by x
class A{
    void x(){}
}
class B extends A{
    protected int x;
}